--- a/app.html
+++ b/app.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="assets/styles/updater.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/buttons.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/alert.css">
-    <meta charset="UTF-8">
 </head>
 
 <body>
@@ -159,7 +158,7 @@
         let confirm = document.getElementById("confirm");
         let form = document.getElementById('form');
         let input = document.getElementById('input');
-        let fullScreenFunction = () => ipcRenderer.send('fullscreen', '');
+        let fullScreenFunction = () => ipcRenderer.send("fullscreen", "");
         let fullScreenInterval = setInterval(() => {
             if (iframe.location.href === 'https://www.habbocity.me/hotel' && iframe.document.getElementById(
                     'hotel1')) {
