--- a/app.html
+++ b/app.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles/updater.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/buttons.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/alert.css">
+    <meta charset="utf-8">
 </head>
 
 <body>
